{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 26,
  "lineage": "551143d7-843b-0870-42dc-b28caabc8f3c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "TRF_EIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-044939c30e7e35f61",
            "domain": "vpc",
            "id": "eipalloc-0fff37c52e5151b82",
            "network_interface": "eni-0081935a963ae9678",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-54-221-216-168.compute-1.amazonaws.com",
            "public_ip": "54.221.216.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TRF_EIP",
              "Origin": "TRF"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Database_TRF",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-2757f631",
            "arn": "arn:aws:ec2:us-east-1:711288837324:instance/i-091d423a222736f65",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091d423a222736f65",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02ad18f093c368216",
            "private_dns": "ip-10-1-1-241.ec2.internal",
            "private_ip": "10.1.1.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-064e93df3918e3db2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e48eaa36d9dfd51",
            "tags": {
              "Name": "Database",
              "Origin": "TRF"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c22b948212604b2b"
            ]
          },
          "dependencies": [
            "aws_security_group.TRF_SG_DB",
            "aws_subnet.TRF_Int_Sub",
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer_TRF",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-2757f631",
            "arn": "arn:aws:ec2:us-east-1:711288837324:instance/i-08dbf7bd7abe672b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08dbf7bd7abe672b5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0884d740c9b941b1b",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-3-94-105-210.compute-1.amazonaws.com",
            "public_ip": "3.94.105.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09fb64bb0d278eb68",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e24c32ef8daffdfa",
            "tags": {
              "Name": "WebServer",
              "Origin": "TRF"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f357946d74773520"
            ]
          },
          "dependencies": [
            "aws_security_group.TRF_SG_WEB",
            "aws_subnet.TRF_Ext_Sub",
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TRF_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00e6ed3e01d7cd7c2",
            "owner_id": "711288837324",
            "tags": {
              "Name": "TRF_IGW",
              "Origin": "TRF"
            },
            "vpc_id": "vpc-05ad4aa4beb2edd72"
          },
          "dependencies": [
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TRF_NAT_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fff37c52e5151b82",
            "id": "nat-0591ba14ae9f7953e",
            "network_interface_id": "eni-0081935a963ae9678",
            "private_ip": "10.0.1.8",
            "public_ip": "54.221.216.168",
            "subnet_id": "subnet-0e24c32ef8daffdfa",
            "tags": {
              "Name": "TRF_NAT_GW",
              "Origin": "TRF"
            }
          },
          "dependencies": [
            "aws_eip.TRF_EIP",
            "aws_subnet.TRF_Ext_Sub",
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "TRF_Internet_Route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e6ed3e01d7cd7c2",
            "id": "r-rtb-094eb7d290d5b443d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094eb7d290d5b443d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.TRF_IGW",
            "aws_route_table.TRF_RT_PUBLIC",
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "TRF_Nat_Route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2b93de4d06e9f911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0591ba14ae9f7953e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2b93de4d06e9f91",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.TRF_NAT_GW",
            "aws_route_table.TRF_RT_INTERNAL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TRF_RT_INTERNAL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d2b93de4d06e9f91",
            "owner_id": "711288837324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "TRF_RT_INT",
              "Origin": "TRF"
            },
            "vpc_id": "vpc-05ad4aa4beb2edd72"
          },
          "dependencies": [
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TRF_RT_PUBLIC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-094eb7d290d5b443d",
            "owner_id": "711288837324",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e6ed3e01d7cd7c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TRF_RT_PUB",
              "Origin": "TRF"
            },
            "vpc_id": "vpc-05ad4aa4beb2edd72"
          },
          "dependencies": [
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TRF_vpc_association01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ac058ed33fb0de9",
            "route_table_id": "rtb-094eb7d290d5b443d",
            "subnet_id": "subnet-0e24c32ef8daffdfa"
          },
          "dependencies": [
            "aws_route_table.TRF_RT_PUBLIC",
            "aws_subnet.TRF_Ext_Sub",
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TRF_vpc_association02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a05cf45013384cb5",
            "route_table_id": "rtb-0d2b93de4d06e9f91",
            "subnet_id": "subnet-07e48eaa36d9dfd51"
          },
          "dependencies": [
            "aws_route_table.TRF_RT_INTERNAL",
            "aws_subnet.TRF_Int_Sub",
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TRF_SG_DB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711288837324:security-group/sg-0c22b948212604b2b",
            "description": "DB SG",
            "egress": [],
            "id": "sg-0c22b948212604b2b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f357946d74773520"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f357946d74773520"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "TRF_SG_DB",
            "name_prefix": null,
            "owner_id": "711288837324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TRF_SG_DB",
              "Origin": "TRF"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad4aa4beb2edd72"
          },
          "dependencies": [
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TRF_SG_WEB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711288837324:security-group/sg-0f357946d74773520",
            "description": "TRF WEB SG",
            "egress": [],
            "id": "sg-0f357946d74773520",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "TRF_SG_WEB",
            "name_prefix": null,
            "owner_id": "711288837324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TRF_SG_WEB",
              "Origin": "TRF"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad4aa4beb2edd72"
          },
          "dependencies": [
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "MYSQL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1396340692",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c22b948212604b2b",
            "self": false,
            "source_security_group_id": "sg-0f357946d74773520",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.TRF_SG_DB",
            "aws_security_group.TRF_SG_WEB",
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1151491067",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c22b948212604b2b",
            "self": false,
            "source_security_group_id": "sg-0f357946d74773520",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.TRF_SG_DB",
            "aws_security_group.TRF_SG_WEB",
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TRF_Ext_Sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711288837324:subnet/subnet-0e24c32ef8daffdfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e24c32ef8daffdfa",
            "map_public_ip_on_launch": false,
            "owner_id": "711288837324",
            "tags": {
              "Name": "TRF_External_Subnet",
              "Origin": "TRF"
            },
            "vpc_id": "vpc-05ad4aa4beb2edd72"
          },
          "dependencies": [
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TRF_Int_Sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711288837324:subnet/subnet-07e48eaa36d9dfd51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-07e48eaa36d9dfd51",
            "map_public_ip_on_launch": false,
            "owner_id": "711288837324",
            "tags": {
              "Name": "TRF_External_Subnet",
              "Origin": "TRF"
            },
            "vpc_id": "vpc-05ad4aa4beb2edd72"
          },
          "dependencies": [
            "aws_vpc.TRF_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TRF_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711288837324:vpc/vpc-05ad4aa4beb2edd72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049ea95bffb502a99",
            "default_route_table_id": "rtb-07a8253a2454a28b5",
            "default_security_group_id": "sg-0950496cdb774be34",
            "dhcp_options_id": "dopt-ea7cac90",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05ad4aa4beb2edd72",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07a8253a2454a28b5",
            "owner_id": "711288837324",
            "tags": {
              "Name": "TRF_vpc",
              "Origin": "TRF"
            }
          }
        }
      ]
    }
  ]
}